edited the live capture feature to allow both segmentation, acne detection and text analysis

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,13 @@
                             <!-- Will be populated dynamically -->
                         </div>
                     </div>
-                </div>
+                      <div class="results-section" id="live-phi-analysis" style="margin-top:2rem; display: none;">
+                     <h4><i class="fas fa-file-alt"></i>Text Analysis</h4>
+                     <div id="phi-analysis-output" class="text-output-box">
+                     <em>Waiting for analysis...</em>
+                     </div>
+                        </div>
+                      </div>
 
 
 
